--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.0"
+
+    ext {
+        kotlin_version = "1.4.0"
+        nav_version = "2.3.0-beta01"
+        retrofit_version = "2.9.0"
+        retrofit_coroutines_adapter_version = "0.9.2"
+        okhttpclient_version = "4.8.1"
+        dagger_version = "2.27"
+        moshi_version = "1.9.3"
+        kotlin_coroutines_version = "1.3.9"
+        arch_testing_version = "2.1.0"
+        mockwebserver = "3.8.1"
+    }
+
     repositories {
         google()
         jcenter()
@@ -8,7 +21,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,6 +33,7 @@ allprojects {
         jcenter()
     }
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
