--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,9 +84,24 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$retrofit_coroutines_adapter_version"
 
-    // Test
+
+    // test
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation "com.squareup.okhttp3:mockwebserver:$mockwebserver"
+    testImplementation "androidx.arch.core:core-testing:$arch_testing_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$kotlin_coroutines_version"
+    testImplementation "org.mockito:mockito-core:1.10.19"
+
+
+    //android test
+    androidTestImplementation "androidx.arch.core:core-testing:$arch_testing_version"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$kotlin_coroutines_version"
+    debugImplementation 'androidx.fragment:fragment-testing:1.2.4'
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
+
+    // Mockito framework
+    androidTestImplementation 'org.mockito:mockito-core:1.10.19'
+    androidTestImplementation "org.mockito:mockito-android:3.3.3"
 
 }
