--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,13 @@
 buildscript {
 
     ext {
-        kotlin_version = "1.4.20"
+        kotlin_version = "1.6.10"
         nav_version = "2.3.0-beta01"
         retrofit_version = "2.9.0"
         retrofit_coroutines_adapter_version = "0.9.2"
         okhttpclient_version = "4.8.1"
-        dagger_version = "2.27"
+        room_version = "2.4.0"
+        dagger_version = "2.31"
         moshi_version = "1.9.3"
         kotlin_coroutines_version = "1.3.9"
         arch_testing_version = "2.1.0"
@@ -16,10 +17,10 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.2'
+        classpath 'com.android.tools.build:gradle:7.0.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         // NOTE: Do not place your application dependencies here; they belong
@@ -30,7 +31,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
