--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
 
     ext {
         kotlin_version = "1.6.10"
-        nav_version = "2.3.0-beta01"
+        nav_version = '2.4.1'
         retrofit_version = "2.9.0"
         retrofit_coroutines_adapter_version = "0.9.2"
         okhttpclient_version = "4.8.1"
@@ -20,7 +20,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath 'com.android.tools.build:gradle:7.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         // NOTE: Do not place your application dependencies here; they belong
