--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,18 @@
 buildscript {
 
     ext {
-        kotlin_version = "1.6.10"
-        nav_version = '2.4.1'
+        kotlin_version = "1.7.0"
+        nav_version = "2.5.0"
         retrofit_version = "2.9.0"
-        retrofit_coroutines_adapter_version = "0.9.2"
+        room_version = "2.4.2"
         okhttpclient_version = "4.8.1"
-        room_version = "2.4.0"
-        dagger_version = "2.31"
-        moshi_version = "1.9.3"
-        kotlin_coroutines_version = "1.3.9"
+        moshi_version = "1.13.0"
+        hilt_version = '2.42'
+        lifecycle_version = "2.2.0"
+        okhttpclient_version = "4.8.1"
+        kotlin_coroutines_version = "1.6.0"
+        retrofit_coroutines_adapter_version = "0.9.2"
+        paging_version = "3.1.1"
         arch_testing_version = "2.1.0"
         mockwebserver = "3.8.1"
     }
@@ -20,11 +23,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath 'com.android.tools.build:gradle:7.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
