--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-
-    ext {
-        kotlin_version = "1.9.21"
-        nav_version = "2.5.0"
-        retrofit_version = "2.9.0"
-        room_version = "2.6.1"
-        okhttpclient_version = "4.8.1"
-        moshi_version = "1.14.0"
-        hilt_version = '2.50'
-        lifecycle_version = "2.2.0"
-        okhttpclient_version = "4.8.1"
-        kotlin_coroutines_version = "1.8.0"
-        retrofit_coroutines_adapter_version = "0.9.2"
-        paging_version = "3.1.1"
-        arch_testing_version = "2.1.0"
-        mockwebserver = "3.8.1"
-    }
-
+    apply from: 'dependencies.gradle'
+    ext.kotlin_version = '1.9.22'
+    
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.2.2'
+        classpath 'com.android.tools.build:gradle:8.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
